--- a/swiftlint.html
+++ b/swiftlint.html
@@ -75,6 +75,13 @@
 				</tr>
 			</thead>
 			<tbody>
+				<tr>
+					<td style="text-align: right;">1</td>
+					<td>CG-iOS-SDK/Sources/CustomerGlu/Model/RegistrationModel.swift</td>
+					<td style="text-align: center;">21:12</td>
+					<td class="warning">Warning</td>
+					<td>Variable name should be between 3 and 40 characters long: &apos;id&apos;</td>
+				</tr>
 			</tbody>
 		</table>
 		
@@ -86,11 +93,11 @@
 			<tbody>
 				<tr>
 					<td>Total files with violations</td>
-					<td>0</td>
+					<td>1</td>
 				</tr>
 				<tr>
 					<td>Total warnings</td>
-					<td>0</td>
+					<td>1</td>
 				</tr>
 				<tr>
 					<td>Total errors</td>
